# ChangeLog for net-ftp/proftpd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/proftpd/ChangeLog,v 1.276 2011/09/28 09:47:22 voyageur Exp $

*proftpd-1.3.4_rc3 (28 Sep 2011)
*proftpd-1.3.3f (28 Sep 2011)

  28 Sep 2011; Bernard Cafarelli <voyageur@gentoo.org>
  -proftpd-1.3.3d-r1.ebuild, +proftpd-1.3.3f.ebuild,
  -proftpd-1.3.4_rc2-r2.ebuild, +proftpd-1.3.4_rc3.ebuild,
  -files/proftpd-1.3.4_rc2-sql-groupsetfast-null-pointer.patch,
  -files/proftpd-bug3586.patch, files/proftpd.initd:
  Proxy commit:
  * Remove init script deprecated --oknodo (bug #384393)
  * Readd memcache support (bug #378881)
  * Add support of ProFTPD's api test suite
  * Remove trivial mod_exec warning

*proftpd-1.3.4_rc2-r2 (18 Aug 2011)

  18 Aug 2011; Bernard Cafarelli <voyageur@gentoo.org>
  -proftpd-1.3.4_rc2.ebuild, -proftpd-1.3.4_rc2-r1.ebuild,
  +proftpd-1.3.4_rc2-r2.ebuild:
  Proxy commit:
  * Bump mod_case to 0.7.
  * Remove ~amd64-fbsd keyword until all ProFTPD dependencies are keyworded for
  ~amd64-fbsd.
  * Remove memcache support. ProFTPD requires dev-libs/libmemcached >= 0.41
  which is not in the portage tree yet. See Gentoo Bugs #378881 and #354261.
  * Set dependency for USE=acl to virtual/acl.
  * Some stylistic changes.

  21 Jul 2011; Anthony G. Basile <blueness@gentoo.org>
  proftpd-1.3.3d-r1.ebuild, proftpd-1.3.3e.ebuild:
  Removed unused 'hardened' flag, bug #375877

*proftpd-1.3.4_rc2-r1 (14 Apr 2011)

  14 Apr 2011; Bernard Cafarelli <voyageur@gentoo.org>
  +proftpd-1.3.4_rc2-r1.ebuild,
  +files/proftpd-1.3.4_rc2-sql-groupsetfast-null-pointer.patch:
  Fix crash with SQL authentication, patch by Andrejs Eigus
  <aei@riga.ahlers.com> in bug #363293

  11 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> proftpd-1.3.3e.ebuild:
  ppc/ppc64 stable wrt #361963

  09 Apr 2011; Raúl Porcel <armin76@gentoo.org> proftpd-1.3.3e.ebuild:
  alpha/sparc stable wrt #361963
