@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/proftpd/Attic/proftpd-1.3.3f.ebuild,v 1.1 2011/09/28 09:47:22 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/proftpd/Attic/proftpd-1.3.3f.ebuild,v 1.2 2011/11/04 14:45:35 voyageur Exp $
 
 EAPI="2"
 inherit eutils autotools
@@ -186,7 +186,6 @@ src_install() {
 
 	insinto /etc/proftpd
 	doins "${FILESDIR}"/proftpd.conf.sample
-	keepdir /var/run/proftpd
 	newinitd "${FILESDIR}"/proftpd.initd proftpd
 	if use xinetd ; then
 		insinto /etc/xinetd.d
