@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/proftpd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/proftpd/ChangeLog,v 1.276 2011/09/28 09:47:22 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/proftpd/ChangeLog,v 1.277 2011/11/04 14:45:35 voyageur Exp $
+
+  04 Nov 2011; Bernard Cafarelli <voyageur@gentoo.org> proftpd-1.3.3e.ebuild,
+  proftpd-1.3.3f.ebuild:
+  Remove "keepdir /var/run/proftpd". Fixes Gentoo Bug #387889
 
 *proftpd-1.3.4_rc3 (28 Sep 2011)
 *proftpd-1.3.3f (28 Sep 2011)
